feat(portalSection): implement main page's link portal sections
* change file names convention to 'PascalCase'
* add App.css
* add text pool objects to Constant.js
* fix some style files

--- a/header/header.css
+++ b/header/header.css
@@ -1,6 +1,9 @@
+
+
 #header {
   display: inline-flex;
-  position: sticky;
+  position: fixed;
+  z-index: 8;
   width: 100%;
   top: 0px;
   left: 0%;
@@ -14,8 +17,10 @@
 
 #header img {
   display: inline;
+  background-color:black;
 }
 
 #header #header-text {
   vertical-align: middle;
+  margin: 2px;
 }
